Got it to work!

--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -62,13 +62,12 @@
 			</div>
 		</div>
 	</div>
-				<!-- Navbar Section -->
-		<div id="nav-spacer"></div>
+		<!-- Navbar Section -->
 		<ul class="navbar">
-			<li><a href="/{{username}}">Account</a></li>
-			<li><a href='/{{username}}/Friends'>Friends</a></li>
-			<li><a href="/{{username}}/Statistics">Statistics</a></li>
-			<li><a href='/{{username}}/Favorites' class="active">Favorites</a></li>
+			<li><a href="/userprofile">Account</a></li>
+			<li><a href='/Friends'>Friends</a></li>
+			<li><a href="/Statistics">Statistics</a></li>
+			<li><a href='/Favorites' class="active">Favorites</a></li>
 		</ul>
 	</div>
 
