--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,12 +21,13 @@
 		<div class="function"><hr><h2><a href="/">Log Out</a></h2><hr></div>
 		<div class="spacer"></div>
 
-		<!-- Navbar section -->
+		<!-- Navbar Section -->
 		<ul class="navbar">
-			<li><a href="/{{username}}/index" class="active">Home</a></li>
-			<li><a href="/{{username}}">Account</a></li>
-			<li><a href='/{{username}}/Friends'>Friends</a></li>
-		</ul>	
+			<li><a href="/userprofile" class="active">Account</a></li>
+			<li><a href='/Friends'>Friends</a></li>
+			<li><a href="/Statistics">Statistics</a></li>
+			<li><a href='/Favorites'>Favorites</a></li>
+		</ul>
 	</div>
 
 	<!-- connected javascript files -->
