--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -28,14 +28,14 @@
 				<br>
 				<input type="password" class="form-control" id="password" placeholder name="pswd">
 			</div>
-			<form action="/{{username}}">
+			<form action="/userprofile">
 				<input type="submit" value="Login">
 			</form>
 		</div>
 		</div>
         <div style="text-align: center; padding: 20px;">
             <div id="FacebookLogin">
-                <a href="/{{username}}">
+                <a href="/userprofile">
                 <p class="facebookLogin" >
                     <fb:login-button scope="public_profile,email"
                                      onlogin="checkLoginState();">
