--- a/views/statistics.handlebars
+++ b/views/statistics.handlebars
@@ -27,10 +27,10 @@
 		
 		<!-- Navbar Section -->
 		<ul class="navbar">
-			<li><a href="/{{username}}">Account</a></li>
-			<li><a href='/{{username}}/Friends'>Friends</a></li>
-			<li><a href="/{{username}}/Statistics" class="active">Statistics</a></li>
-			<li><a href='/{{username}}/Favorites'>Favorites</a></li>
+			<li><a href="/userprofile">Account</a></li>
+			<li><a href='/Friends'>Friends</a></li>
+			<li><a href="/Statistics" class="active">Statistics</a></li>
+			<li><a href='/Favorites'>Favorites</a></li>
 		</ul>
 	</div>
 
