--- a/views/friends.handlebars
+++ b/views/friends.handlebars
@@ -25,10 +25,10 @@
 		</div>
 		<!-- Navbar Section -->
 		<ul class="navbar">
-			<li><a href="/{{username}}">Account</a></li>
-			<li><a href='/{{username}}/Friends' class="active">Friends</a></li>
-			<li><a href="/{{username}}/Statistics">Statistics</a></li>
-			<li><a href='/{{username}}/Favorites'>Favorites</a></li>
+			<li><a href="/userprofile">Account</a></li>
+			<li><a href='/Friends' class="active">Friends</a></li>
+			<li><a href="/Statistics">Statistics</a></li>
+			<li><a href='/Favorites'>Favorites</a></li>
 		</ul>
 	</div>
 	</div>
