--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -26,8 +26,8 @@
 			</div>
 			<div class="sub">
 				<!-- Links to Stats and Favorites user pages. Need to add link to Stats page and fill those pages -->
-				<h3><a href="/statistics">Statistics </a><span class="glyphicon glyphicon-stats"></span></h3><hr>
-				<h3><a href="/favorites">Favorites</a></h3>
+				<h3><a href="/statistics#" id="statslink">Statistics </a><span class="glyphicon glyphicon-stats"></span></h3><hr>
+				<h3><a href="/favorites#" id="favslink">Favorites</a></h3>
 			</div>
 		</div>
 		<!-- At a Glance Table -->
@@ -48,7 +48,7 @@
 					<li>Last Listened to:</li>
 					<div id="lastlistenedsong">
 						<li><a href="{{songlink}}" id="lastsong">{{song}}</a> by <a href="{{artistlink}}" id="lastartist">{{artist}}</a></li>
-						<li>From <a href="{{sourcelink}}" id="lastsource">{{source}}</a> at <p id="time">{{time}}</p></li>
+						<li>From <a href="{{sourcelink}}" id="lastsource">{{source}}</a></li>
 					</div>
 				</ul></li>
 				<!-- Linked Music Accounts, Add Button -->
@@ -97,21 +97,83 @@
 			* @return Object
 			*/
 			function getHashParams() {
-			var hashParams = {};
-			var e, r = /([^&;=]+)=?([^&;]*)/g,
-				q = window.location.hash.substring(1);
-			while ( e = r.exec(q)) {
-				hashParams[e[1]] = decodeURIComponent(e[2]);
+				var hashParams = {};
+				var e, r = /([^&;=]+)=?([^&;]*)/g,
+					q = window.location.hash.substring(1);
+				while ( e = r.exec(q)) {
+					hashParams[e[1]] = decodeURIComponent(e[2]);
+				}
+				return hashParams;
 			}
-			return hashParams;
+			/** 
+			 * Calls Spotify API to get current users profile
+			 */
+			function getUserProfile(access_token) {
+				$.ajax({
+					url: 'https://api.spotify.com/v1/me',
+					headers: {
+					'Authorization': 'Bearer ' + access_token
+					},
+					success: function(response) {
+						console.log(response);
+						//update the username, picture, linked account, and stats and favorites links
+						$('.backandname h1').text(response.id);
+						$('.pic-container a img').attr("src", response.images[0].url);
+						$("#linkedaccounts li a").attr("href", response.external_urls.spotify);
+						//$('#statslink').attr("href", "/statistics#" + access_token);
+						//$('#favslink').attr("href", "/favorites#" + access_token);
+						$("#linkedaccounts").show();
+						$("#ConnectSpotify").hide();
+					}
+				});
+			}
+			/** 
+			 * Calls Spotify API to get current users recently listened to track
+			 */
+			function getRecentlyListened(access_token) {
+				$.ajax({
+					url: 'https://api.spotify.com/v1/me/player/recently-played?limit=1',
+					headers: {
+					'Authorization': 'Bearer ' + access_token
+					},
+					success: function(response) {
+						console.log(response);
+						//last song
+						$("#lastsong").attr("href", response.items[0].track.external_urls.spotify);
+						$("#lastsong").text(response.items[0].track.name);
+						//last artist
+						$("#lastartist").attr("href", response.items[0].track.artists[0].external_urls.spotify);
+						$("#lastartist").text(response.items[0].track.artists[0].name);
+						//last source
+						$("#lastsource").attr("href", "https://www.spotify.com/us/");
+						$("#lastsource").text("Spotify");
+						$("#lastlistenedsong").show();
+					}
+				});
+			}
+			/**
+			 * Calls Spotify API to get the Top artists and does some fanagling to determine top genres
+			*/
+			function getTopGenres(access_token) {
+				//hacky way to do it
+				//get top artists
+				//for each top artist, save their genres in a map 
+				//when a genre is found that is already saved, update its count
+				//the genres with the highest counts are the top genres
+				//Will require: 
+				//API call to top artists
+				//Parsing that data to build a map of genres and counts
+				//Taking the top artists from that map based on count
 			}
 
 			var params = getHashParams();
 
 			var access_token = params.access_token,
-								refresh_token = params.refresh_token,
-								error = params.error;
+				refresh_token = params.refresh_token,
+				error = params.error;
 
+			sessionStorage.setItem("access_token", access_token);
+			
 			console.log(access_token);
 			console.log(refresh_token);
 			if (error) {
@@ -128,41 +190,9 @@
 					//});
 
 					//Calls Spotify API to get current users profile
-					$.ajax({
-						url: 'https://api.spotify.com/v1/me',
-						headers: {
-						'Authorization': 'Bearer ' + access_token
-						},
-						success: function(response) {
-							console.log(response);
-							//update the username, picture, and linked account
-							$('.backandname h1').text(response.id);
-							$('.pic-container a img').attr("src", response.images[0].url);
-							$("#linkedaccounts li a").attr("href", response.external_urls.spotify);
-							$("#linkedaccounts").show();
-							$("#ConnectSpotify").hide();
-						}
-					});
+					getUserProfile(access_token);
 					//Calls Spotify API to get current users recently listened to track
-					/*
-					$.ajax({
-						url: 'https://api.spotify.com/v1/me/player/recently-played?limit=1',
-						headers: {
-						'Authorization': 'Bearer ' + access_token
-						},
-						success: function(response) {
-							console.log(response);
-							$("#lastsong").attr("href", response.items[0].track.external_urls.spotify);
-							$("#lastsong").text(response.items[0].track.name);
-							$("lastartist").attr("href", response.items[0].track.artists[0].external_urls.spotify);
-							$("lastartist").text(response.items[0].track.artists[0].name);
-							$("#lastsource").attr("href", "https://www.spotify.com/us/");
-							$("#lastsource").text("Spotify");
-							$("#time").text(response.items[0].played_at);
-							$("#lastlistenedsong").show();
-						}
-					});*/
-
+					getRecentlyListened(access_token);
 				} 
 				else {
 					// render initial screen
