--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -172,7 +172,7 @@
 				refresh_token = params.refresh_token,
 				error = params.error;
 
-			sessionStorage.setItem("access_token", access_token);
+			localStorage.setItem("access_token", access_token);
 			
 			console.log(access_token);
 			console.log(refresh_token);
