--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -84,14 +84,14 @@
 	<script>
 		(function () {
 			//can use the same access_token!
-			console.log(sessionStorage.getItem("access_token"));
-			if (!(!!sessionStorage.getItem("access_token"))) {
-				console.log("Ready for API calls!");				
-			}
-			else {
+			if (localStorage.getItem("access_token") == 'undefined') {				
 				//no data yet
 				$('.playlists').hide();
 				$('#favsmsg').show();
+							
+			} else {
+			 	console.log(localStorage.getItem("access_token"));
+				console.log("Ready for API calls!");
 			}
 		})();
 	</script>
