--- a/views/friends.handlebars
+++ b/views/friends.handlebars
@@ -36,6 +36,8 @@
 		function goBack(){
 			window.history.back();
 		}
+
+		//TODO Samuel: Stretch goal, get some friends and followers
 	</script>
 </body>
 </html>
