--- a/views/statistics.handlebars
+++ b/views/statistics.handlebars
@@ -41,6 +41,8 @@
 	</script>
 	<script>
 		(function () {
+			//TODO: Samuel: Make an API call to get some stats. Use genres?
+
 			//can use the same access_token!
 			if (localStorage.getItem("access_token") == 'undefined') {
 				//no data yet
