--- a/public/css/favorites.css
+++ b/public/css/favorites.css
@@ -4,12 +4,18 @@ h2{
 .backandname p{
     color:#3CB371;
 }
+
+.timerangeselector {
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+
 img{
     max-width:200px;
     max-height:200px;
 }
+
 .playlists {
-    display: inline-table;
     padding: 2px 2px;
     border: 1px solid rgb(10, 10, 10);
     border-width: 1px;
@@ -23,8 +29,17 @@ img{
     padding: 1px;
     margin: 3px;
     width: 100%;
-    height:29%
 }
+
+.bigrow{
+    position: relative;
+    overflow: hidden;
+    padding: 1px;
+    margin: 3px;
+    width: 100%;
+    height: 10%;
+}
+
 .thumbnail{
     display:block;
     border-style:hidden;
@@ -33,7 +48,7 @@ img{
     float:left;
     width:45%;
     text-align:center;
-    height:28%;
+    /* height:28%; */
     margin:5px;
     vertical-align:top;
 }
