--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -18,7 +18,7 @@
 			<div class="form-group">
 				<label for="name">Username:</label>
 				<br>
-				<input type="text" class="form-control" id="name" placeholder name="name">
+				<input type="text" class="form-control" id="username" placeholder name="name">
 			</div>
 			<div class="form-group">
 				<label for="password">Password:</label>
@@ -56,6 +56,7 @@
 		 * Make Favorites page contain Playlists 
 		 */
 		function playlistFavs() {
+			localStorage.clear();
 			localStorage.setItem("favorites", "playlists");
 		}
 
@@ -63,6 +64,7 @@
 		 * Make Favorites page contain Playlists 
 		 */
 		function artistsFavs() {
+			localStorage.clear();
 			localStorage.setItem("favorites", "artists");
 		}
 	</script>
